--- a/scss/pages/_lifear-info-pages.scss
+++ b/scss/pages/_lifear-info-pages.scss
@@ -2,9 +2,10 @@
     background-image: url(../Resources/pages/lifear/lifear_activism_background2.svg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    margin-left: -6%;
-    margin-right: -6%;
-    height: calc(100vw);
+    margin-left: 0 auto;
+    height: 100vw;
+    margin-left: -5.55%;
+    margin-right: -5.55%;
     margin-bottom: -10%;
 
     h2{
