--- a/scss/components/_classes.scss
+++ b/scss/components/_classes.scss
@@ -45,6 +45,12 @@
     justify-content: center;
 }
 
+@media screen and (max-width:700px){
+    .TwoColumnSection{
+        flex-wrap: wrap;
+    }
+}
+
 .button{
     border-style: solid;
     width: 50%;
