--- a/scss/components/_pricing-table.scss
+++ b/scss/components/_pricing-table.scss
@@ -1,7 +1,7 @@
 .pricingTable{
     background-color: white;
     border-radius: 35px;
-    border: solid $blue 7px;
+    border: solid $lifear 7px;
     margin: 4px;
     padding: 0;
     box-sizing: border-box;
@@ -17,7 +17,7 @@
 }
 
 .planTitle{
-    background-color: $blue;
+    background-color: $lifear;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     color: white;
