--- a/scss/components/_variables.scss
+++ b/scss/components/_variables.scss
@@ -5,5 +5,7 @@ $yellow:rgb(215, 202, 64);
 $red:rgb(229, 63, 63);
 $redDarker: rgb(195, 50, 50);
 $teal: rgb(7, 152, 186);
+$lifear: rgb(70, 177, 223);
+$lifear-dark: rgb(32, 128, 168);
 $backgroundColor: rgb(236, 248, 254);
 $backgroundColorRed: rgb(254, 236, 236);
