--- a/scss/pages/_lifear-splash.scss
+++ b/scss/pages/_lifear-splash.scss
@@ -23,7 +23,7 @@
     width: 100vw;
 }
 .title{
-    color:$blue;
+    color:$lifear-dark;
     font-size: 10vh;
     line-height: 1.1em;
     text-align: center;
