--- a/scss/pages/_portfolio.scss
+++ b/scss/pages/_portfolio.scss
@@ -4,6 +4,7 @@
     border-top: 1px solid #ccc;
     padding-bottom: 40px;
     padding-top: 40px;
+    display: none;
 }
 .testimonial{
     text-align: center;
