--- a/scss/pages/_lifear-gallery.scss
+++ b/scss/pages/_lifear-gallery.scss
@@ -6,6 +6,6 @@
     height: 45vh;
     border-style: solid;
     border-width: 7px;
-    border-color: $blue;
+    border-color: $lifear;
     margin: 8px;
 }
