--- a/scss/pages/_lifear-info-pages.scss
+++ b/scss/pages/_lifear-info-pages.scss
@@ -34,8 +34,11 @@
 }
 
 // below is for business
+#table{
+    border-color: $lifear-dark;
+}
 .tableHeader{
-    background-color: $blue;
+    background-color: $lifear-dark;
     color: white;
 }
 .tableIcon{
@@ -47,7 +50,7 @@
     box-shadow: 0px 10px 10px gray;
     
     &.first{
-        color:$blue;
+        color:$lifear-dark;
         border-top-left-radius: 15px;
         border-top-right-radius: 15px;
     }
