Added lifear colouring to mobile version

--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -92,6 +92,9 @@
         &.red{
             background-color: $red;
         }
+        &.lifear{
+            background-color: $lifear;
+        }
     }
     .headerLogo{
         width: auto;
