--- a/scss/main.css
+++ b/scss/main.css
@@ -933,7 +933,7 @@ nav::before {
   list-style: none;
   margin-top: 10vh;
   margin-right: 5%;
-  width: 30vw;
+  width: 50vw;
 }
 
 .innerMenu {
@@ -1032,6 +1032,12 @@ nav::before {
     margin-top: 10vh;
     width: 100%;
     height: 100%;
+  }
+}
+
+@media screen and (max-width: 830px) {
+  .navText, .navTextInner {
+    font-size: 4vh;
   }
 }
 
