--- a/scss/sections/_nav.scss
+++ b/scss/sections/_nav.scss
@@ -128,7 +128,7 @@ nav::before {
   list-style: none;
   margin-top: 10vh;
   margin-right: 5%;
-  width: 30vw;
+  width: 50vw;
 }
 .innerMenu{
   list-style: none;
@@ -206,6 +206,12 @@ nav::before {
     margin-top: 10vh;
     width: 100%;
     height: 100%;
+  }
+}
+
+@media screen and (max-width: 830px){
+  .navText, .navTextInner {
+    font-size: 4vh;
   }
 }
 
